# IT-mannen

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt
setup/: pr.sql  setup_pr.py  wait-for-it.sh
src/: app.py  forms.py  slidegenerator.py
src/blueprints/: auth.py  create_post.py  create_slideshow.py  edit_slideshow.py  home.py  user.py  view.py
src/database/: connection_pr.py  pr.py  pr_tuples.py
src/static/: styles.css  tv.css
src/templates/: create_post.html  create_slideshow.html  edit_slideshow.html  form-helper.html  home.html  index.html  login.html  tv.html  user.html
