[project]
name = "it-mannen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.6.5",
    "datetime==5.5",
    "flask==3.1.1",
    "flask-wtf==1.2.2",
    "pillow==12.0.0",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "requests==2.32.5",
    "typing==3.7.4.3",
    "wtforms==3.2.1",
]
